--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "jsonwebtoken": "^8.3.0",
     "request": "^2.88.0",
-    "request-promise-native": "^1.0.5"
+    "request-promise-native": "^1.0.5",
+    "xss": "^1.0.3"
   }
 }
